@@ -474,6 +474,7 @@
 	"passwordtooshort": "Passwords must be at least {{PLURAL:$1|1 character|$1 characters}}.",
 	"passwordtoolong": "Passwords cannot be longer than {{PLURAL:$1|1 character|$1 characters}}.",
 	"passwordtoopopular": "Commonly chosen passwords cannot be used. Please choose a password that is more difficult to guess.",
+	"passwordinlargeblacklist": "The password entered is in a list of very commonly used passwords. Please choose a more unique password.",
 	"password-name-match": "Your password must be different from your username.",
 	"password-login-forbidden": "The use of this username and password has been forbidden.",
 	"mailmypassword": "Reset password",
